# ChangeLog for dev-perl/Sort-Naturally
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sort-Naturally/ChangeLog,v 1.1 2009/08/05 10:22:31 hwoarang Exp $

*Sort-Naturally-1.02 (05 Aug 2009)

  05 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  +Sort-Naturally-1.02.ebuild, +metadata.xml:
  Initial commit for Sort-Naturally perl module
