@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sort-Naturally/Attic/Sort-Naturally-1.02.ebuild,v 1.1 2009/08/05 10:22:31 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sort-Naturally/Attic/Sort-Naturally-1.02.ebuild,v 1.2 2010/03/22 10:56:43 phajdan.jr Exp $
 
 EAPI=2
 
@@ -10,7 +10,7 @@ inherit perl-module
 DESCRIPTION="sort lexically, but sort numeral parts numerically"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 x86"
 IUSE=""
 
 SRC_TEST=do
