@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Sort-Naturally
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sort-Naturally/ChangeLog,v 1.1 2009/08/05 10:22:31 hwoarang Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sort-Naturally/ChangeLog,v 1.2 2010/03/22 10:56:43 phajdan.jr Exp $
+
+  22 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  Sort-Naturally-1.02.ebuild:
+  x86 stable wrt bug #302033
 
 *Sort-Naturally-1.02 (05 Aug 2009)
 
